[gd_scene load_steps=6 format=2]

[ext_resource path="res://World/Background/ParallaxBackground.gd" type="Script" id=1]
[ext_resource path="res://World/Background/BackgroundSprites/pattern1_1.png" type="Texture" id=2]
[ext_resource path="res://World/Background/BackgroundSprites/long_wood_tile.png" type="Texture" id=3]
[ext_resource path="res://World/Background/BackgroundSprites/pattern2.png" type="Texture" id=4]
[ext_resource path="res://World/Background/BackgroundSprites/pattern3.png" type="Texture" id=5]

[node name="ParallaxBackground" type="ParallaxBackground"]
script = ExtResource( 1 )

[node name="MainLayer" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 1366, 0 )

[node name="MainBackground" type="Sprite" parent="MainLayer"]
texture = ExtResource( 2 )
centered = false

[node name="MainBackground2" type="Sprite" parent="MainLayer"]
visible = false
position = Vector2( 1366, 0 )
texture = ExtResource( 4 )
centered = false

[node name="MainBackground3" type="Sprite" parent="MainLayer"]
visible = false
position = Vector2( 1366, 0 )
texture = ExtResource( 5 )
centered = false

[node name="FloorLayer" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 3, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="FloorBackground" type="Sprite" parent="FloorLayer"]
position = Vector2( 0, 594 )
scale = Vector2( 1, 0.5 )
texture = ExtResource( 3 )
centered = false

[node name="FloorBackground2" type="Sprite" parent="FloorLayer"]
position = Vector2( 1024, 594 )
scale = Vector2( 1, 0.5 )
texture = ExtResource( 3 )
centered = false

[node name="BackgroundSwitchTimer" type="Timer" parent="."]
wait_time = 50.0
autostart = true

[connection signal="timeout" from="BackgroundSwitchTimer" to="." method="_on_BackgroundSwitchTimer_timeout"]
